<?xml version="1.0"?>
<package format="2">.
  <name>pdp_msgs</name>
  <version>0.1.0</version>
  <description>PDP related message types.</description>

  <maintainer email="yurt@yorku.ca">Mathias Lüdtke</maintainer>
  <author email="mastafa.awal@hotmail.com">Ivor Wanders</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
